rework from completableFuture to executors